--- a/Aula 10 - Desenvolvimento Web 1/Atividade 10/contato.html
+++ b/Aula 10 - Desenvolvimento Web 1/Atividade 10/contato.html
@@ -13,6 +13,20 @@
 </head>
 <body>
     <header id="topo">
+        <div class="acesibilidade">
+            <ul id="atalhos">
+                <li><a href="#conteudo" accesskey="1" title="Ir diretamente para o conteúdo">Ir para o conteúdo 
+                [1]</a></li>
+                <li><a href="#menu" accesskey="2" title="Ir diretamente para o menu">Ir para o menu [2]</a></li>
+                <li><a href="#rodape" accesskey="3" title="Ir diretamente para o rodapé">Ir para o rodapé [3]</a></li>
+
+                <li id="pgacess"><a href="acessibilidade.html" title="Ir para a página de acessbilidade">ACESSIBILIDADE</a></li>
+                <li class="contraste"><a href="javascript:void(0);" id="contraste">CONTRASTE PRETO</a></li>
+                <li class=contraste><a href="javascript:void(0);" id="sem_contraste">SEM CONTRASTE</a></li>
+                <li class="fonte"><a href="javascript:void(0);" id="aumentar">A+</a></li>
+                <li class="fonte"><a href="javascript:void(0);" id="aumentar">A-</a></li>
+            </ul>
+        </div>
         <img id="logo" src="imagem/FATEC_ZONA_LESTE.png" alt="imagem com a palavra Fatex em cinza e a expressão Zona Leste em Vermelho">
         <nav>
             <ul id="menu">
@@ -92,7 +106,7 @@
         </section>
     </main>
 </body> 
-    <footer class="rodape"><p>Desenvolvido por Ana Caroline Ferreira Rodrigues &copy; 2021.</p>
+    <footer id="rodape"><p>Desenvolvido por Ana Caroline Ferreira Rodrigues &copy; 2021.</p>
         <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img style="border:0;width:88px;height:31px"
