--- a/Aula 11 - Desenvolvimento Web 1/Atividade 11/contato.html
+++ b/Aula 11 - Desenvolvimento Web 1/Atividade 11/contato.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Aula comentários, metadados, listas e layout">
     <meta name="keywords" content="HTML, comentários, listas,layout, Elementos Semânticos">
     <meta name="author" content="Ana Caroline F. Rodigues">
@@ -13,8 +14,24 @@
 </head>
 <body>
     <header id="topo">
+        <div class="acesibilidade">
+            <ul id="atalhos">
+                <li><a href="#conteudo" accesskey="1" title="Ir diretamente para o conteúdo">Ir para o conteúdo 
+                [1]</a></li>
+                <li><a href="#menu" accesskey="2" title="Ir diretamente para o menu">Ir para o menu [2]</a></li>
+                <li><a href="#rodape" accesskey="3" title="Ir diretamente para o rodapé">Ir para o rodapé [3]</a></li>
+
+                <li id="pgacess"><a href="acessibilidade.html" title="Ir para a página de acessbilidade">ACESSIBILIDADE</a></li>
+                <li class="contraste"><a href="javascript:void(0);" id="contraste">CONTRASTE PRETO</a></li>
+                <li class=contraste><a href="javascript:void(0);" id="sem_contraste">SEM CONTRASTE</a></li>
+                <li class="fonte"><a href="javascript:void(0);" id="aumentar">A+</a></li>
+                <li class="fonte"><a href="javascript:void(0);" id="aumentar">A-</a></li>
+            </ul>
+        </div>
         <img id="logo" src="imagem/FATEC_ZONA_LESTE.png" alt="imagem com a palavra Fatex em cinza e a expressão Zona Leste em Vermelho">
         <nav>
+            <label for="bt_menu"><img src="imagem/menu.png" alt="menu"></label>
+            <input type="checkbox" id="bt_menu">
             <ul id="menu">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="comentarios.html">Comentários</a></li>
@@ -32,6 +49,10 @@
     </header>
     <main id="conteudo">
         <h1>Fale Conosco</h1>
+        <ul class="breadcrumb">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a>Contato</a></li>
+        </ul>
         <section>
           <form name="contato" id="contato" method="POST">
               <fieldset>
@@ -92,7 +113,7 @@
         </section>
     </main>
 </body> 
-    <footer class="rodape"><p>Desenvolvido por Ana Caroline Ferreira Rodrigues &copy; 2021.</p>
+    <footer id="rodape"><p>Desenvolvido por Ana Caroline Ferreira Rodrigues &copy; 2021.</p>
         <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img style="border:0;width:88px;height:31px"
